--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
                             
                             <div class="mt-6 flex justify-center space-x-4">
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-amber-800">15+</div>
+                                    <div class="text-2xl font-bold text-amber-800">10+</div>
                                     <div class="text-sm text-gray-600">Năm Kinh Nghiệm</div>
                                 </div>
                                 <div class="text-center">
-                                    <div class="text-2xl font-bold text-amber-800">50+</div>
+                                    <div class="text-2xl font-bold text-amber-800">5+</div>
                                     <div class="text-sm text-gray-600">Loại Cà Phê</div>
                                 </div>
                                 <div class="text-center">
@@ -833,17 +833,17 @@
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-phone text-yellow-400 mr-3"></i>
-                            <p class="text-gray-300">+84 (0) 123 456 789</p>
+                            <p class="text-gray-300">+84 (0) 988 007 527</p>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-yellow-400 mr-3"></i>
-                            <p class="text-gray-300">hello@caphesaigon.vn</p>
+                            <p class="text-gray-300">BABAIU23341@student.hcmiu.edu.vn</p>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-clock text-yellow-400 mr-3"></i>
                             <div>
-                                <p class="text-gray-300">Thứ 2-6: 7:00 - 20:00</p>
-                                <p class="text-gray-300">Thứ 7-CN: 8:00 - 21:00</p>
+                                <p class="text-gray-300"> Mở cửa thứ 2-6: 7:00 - 20:00</p>
+                                <p class="text-gray-300">Mở cửa thứ 7-CN: 8:00 - 21:00</p>
                             </div>
                         </div>
                     </div>
@@ -1734,4 +1734,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988ea5ac8081096a',t:'MTc1OTUxNzY1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
