--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <span class="text-gray-600 text-sm">(127 đánh giá)</span>
+                                <span class="text-gray-600 text-sm">(127)</span>
                             </div>
                             
                             <!-- Price and Action -->
@@ -389,7 +389,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <span class="text-gray-600 ml-2">(127 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(127)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Cao Nguyên Đà Lạt', 599000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -428,7 +428,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star-half-alt"></i>
-                                <span class="text-gray-600 ml-2">(89 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(89)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Robusta Buôn Ma Thuột', 499000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -467,7 +467,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <span class="text-gray-600 ml-2">(156 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(156)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Sài Gòn Buổi Sáng', 579000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -506,7 +506,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <span class="text-gray-600 ml-2">(73 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(73)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Arabica Cầu Đất Đặc Biệt', 749000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -545,7 +545,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <span class="text-gray-600 ml-2">(45 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(45)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Chế Biến Mật Ong Đặc Biệt', 879000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -584,7 +584,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="far fa-star"></i>
-                                <span class="text-gray-600 ml-2">(62 đánh giá)</span>
+                                <span class="text-gray-600 ml-2">(62)</span>
                             </div>
                         </div>
                         <button onclick="addToCart('Cà Phê Không Caffeine Swiss Water', 679000)" class="w-full bg-amber-800 text-white py-3 rounded-lg hover:bg-amber-900 transition-colors">
@@ -1724,6 +1724,7 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988ea5ac8081096a',t:'MTc1OTUxNzY1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
