--- a/index.html
+++ b/index.html
@@ -658,9 +658,9 @@
                 <!-- Review 3 -->
                 <div class="review-card rounded-2xl p-6 fade-in">
                     <div class="flex items-center mb-4">
-                        <div class="w-12 h-12 bg-gradient-to-br from-green-400 to-green-600 rounded-full flex items-center justify-center text-white font-bold text-lg mr-4">
-                            DT
-                        </div>
+                  
+                            <img  class="w-12 h-12 bg-gradient-to-br from-green-400 to-green-600 rounded-full flex items-center justify-center text-white font-bold text-lg mr-4" src='https://photo-zmp3.zadn.vn/avatars/3/3/7/4/337463fd75f550c482e85167da7d733f.jpg">
+            
                         <div>
                             <h4 class="font-semibold text-gray-800">Đức Thành</h4>
                             <p class="text-sm text-gray-600">Chủ Doanh Nghiệp</p>
@@ -1725,6 +1725,7 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988ea5ac8081096a',t:'MTc1OTUxNzY1Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
 
