--- a/contact-support.html
+++ b/contact-support.html
@@ -95,6 +95,7 @@
         </div>
       </form>
     </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-gray-900 text-white py-6 md:py-8 mt-8 text-center">
