--- a/contact-support.html
+++ b/contact-support.html
@@ -1,114 +1,14 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Liên Hệ Hỗ Trợ - Cà Phê Sài Gòn</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      box-sizing: border-box;
-    }
-    .contact-card {
-      transition: all 0.3s ease;
-    }
-    .contact-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
-<body class="bg-gradient-to-br from-amber-50 to-orange-100 text-gray-800 min-h-screen">
-  <!-- Header -->
-  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-4 md:py-6 shadow-lg sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">Cà Phê Sài Gòn</h1>
-      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-4 py-2 md:px-6 md:py-3 rounded-lg text-base md:text-lg font-medium flex items-center">
-        <svg class="mr-2 w-5 h-5 md:w-6 md:h-6 fill-current" viewBox="0 0 24 24">
-          <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
-        </svg>
-        Về Trang Chủ
-      </a>
-    </div>
-  </header>
-
-  <main class="max-w-6xl mx-auto px-4 py-8 md:py-12">
-    <!-- Tiêu đề -->
-    <div class="text-center mb-10 md:mb-12">
-      <h2 class="text-3xl sm:text-4xl md:text-6xl font-bold text-amber-800 mb-4">Liên Hệ Hỗ Trợ</h2>
-      <p class="text-base sm:text-lg md:text-2xl text-gray-600 max-w-3xl mx-auto">
-        Chúng tôi luôn sẵn sàng hỗ trợ bạn 24/7. Hãy liên hệ với chúng tôi qua các kênh dưới đây.
-      </p>
-    </div>
-
-    <!-- Thẻ liên hệ -->
-    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6 md:gap-8 mb-12">
-      <!-- Hotline -->
-      <div class="contact-card bg-white rounded-2xl shadow-lg p-6 md:p-8 text-center">
-        <h3 class="text-xl md:text-2xl font-bold text-gray-800 mb-3">Hotline 24/7</h3>
-        <p class="text-2xl md:text-4xl font-bold text-green-600 mb-4">0988 007 527</p>
-        <a href="tel:0988007527" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 md:px-6 md:py-3 rounded-lg font-semibold inline-flex items-center">
-          Gọi Ngay
-        </a>
-      </div>
-
-      <!-- Email -->
-      <div class="contact-card bg-white rounded-2xl shadow-lg p-6 md:p-8 text-center">
-        <h3 class="text-xl md:text-2xl font-bold text-gray-800 mb-3">Email Hỗ Trợ</h3>
-        <p class="text-sm sm:text-base md:text-lg font-semibold text-blue-600 mb-4 break-all">BABAIU23341@student.hcmiu.edu.vn</p>
-        <a href="mailto:BABAIU23341@student.hcmiu.edu.vn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 md:px-6 md:py-3 rounded-lg font-semibold inline-flex items-center">
-          Gửi Email
-        </a>
-      </div>
-
-      <!-- Zalo -->
-      <div class="contact-card bg-white rounded-2xl shadow-lg p-6 md:p-8 text-center">
-        <h3 class="text-xl md:text-2xl font-bold text-gray-800 mb-3">Chat Zalo</h3>
-        <p class="text-lg md:text-xl font-semibold text-blue-500 mb-4">@caphesaigon</p>
-        <a href="https://zalo.me/caphesaigon" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 md:px-6 md:py-3 rounded-lg font-semibold inline-flex items-center">
-          Nhắn Tin Ngay
-        </a>
-      </div>
-    </div>
-
-    <!-- Form -->
-    <div class="bg-white rounded-2xl shadow-lg p-6 md:p-8 mb-12">
-      <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-amber-800 mb-6 text-center">Gửi Tin Nhắn</h3>
-      <form class="max-w-2xl mx-auto" onsubmit="handleSubmit(event)">
-        <div class="grid md:grid-cols-2 gap-4 md:gap-6 mb-6">
-          <input type="text" required placeholder="Họ và Tên" class="w-full px-4 py-2 md:py-3 border rounded-lg">
-          <input type="tel" required placeholder="Số Điện Thoại" class="w-full px-4 py-2 md:py-3 border rounded-lg">
-        </div>
-        <input type="email" placeholder="Email" class="w-full px-4 py-2 md:py-3 border rounded-lg mb-6">
-        <select class="w-full px-4 py-2 md:py-3 border rounded-lg mb-6">
-          <option>Tư vấn sản phẩm</option>
-          <option>Hỗ trợ kỹ thuật</option>
-          <option>Khiếu nại</option>
-          <option>Góp ý</option>
-          <option>Khác</option>
-        </select>
-        <textarea required rows="5" placeholder="Nội dung..." class="w-full px-4 py-2 md:py-3 border rounded-lg mb-6"></textarea>
-        <div class="text-center">
-          <button type="submit" class="bg-amber-600 hover:bg-amber-700 text-white px-6 md:px-8 py-3 md:py-4 rounded-xl font-semibold text-base md:text-lg">
-            Gửi Tin Nhắn
-          </button>
-        </div>
-      </form>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white py-6 md:py-8 mt-8 text-center">
-    <h3 class="text-base md:text-lg font-semibold mb-3">Cà Phê Sài Gòn</h3>
-    <p class="text-gray-400 text-xs md:text-sm">© 2024 Cà Phê Sài Gòn. Tất cả quyền được bảo lưu.</p>
-  </footer>
-
   <script>
     function handleSubmit(event) {
       event.preventDefault();
       alert("Tin nhắn đã được gửi thành công!");
       event.target.reset();
     }
+
+    function scrollToTop() {
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
+    }
   </script>
-</body>
-</html>
