--- a/shipping.html
+++ b/shipping.html
@@ -3,36 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thông Tin Vận Chuyển - Cà Phê Sài Gòn</title>
+  <title>Liên Hệ Hỗ Trợ - Cà Phê Sài Gòn</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       box-sizing: border-box;
     }
-    .shipping-item { transition: all 0.3s ease; }
-    .shipping-item:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+    .contact-card {
+      transition: all 0.3s ease;
     }
-    .zone-item { transition: all 0.3s ease; }
-    .zone-item:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+    .contact-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
     }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <!-- HEADER -->
-  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-4 sm:py-6 shadow-lg sticky top-0 z-50">
+<body class="bg-gradient-to-br from-amber-50 to-orange-100 text-gray-800 min-h-screen">
+  <!-- Header -->
+  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-6 shadow-lg sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-xl sm:text-2xl md:text-3xl font-bold flex items-center">
-        <svg class="mr-2 sm:mr-3 w-6 h-6 sm:w-8 sm:h-8 fill-current" viewBox="0 0 24 24">
-          <path d="M3,4A2,2 0 0,0 1,6V17H3A3,3 0 0,0 6,20A3,3 0 0,0 9,17H15A3,3 0 0,0 18,20A3,3 0 0,0 21,17H23V12L20,8H17V4M10,6L14,10L10,14V11H4V9H10M6,15.5A1.5,1.5 0 0,1 7.5,17A1.5,1.5 0 0,1 6,18.5A1.5,1.5 0 0,1 4.5,17A1.5,1.5 0 0,1 6,15.5M18,15.5A1.5,1.5 0 0,1 19.5,17A1.5,1.5 0 0,1 18,18.5A1.5,1.5 0 0,1 16.5,17A1.5,1.5 0 0,1 18,15.5Z"/>
-        </svg>
-        Cà Phê Sài Gòn
-      </h1>
-      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-4 sm:px-6 py-2 sm:py-3 rounded-lg transition-colors duration-200 text-base sm:text-lg font-medium flex items-center">
-        <svg class="mr-2 w-5 h-5 sm:w-6 sm:h-6 fill-current" viewBox="0 0 24 24">
+      <h1 class="text-3xl font-bold">Cà Phê Sài Gòn</h1>
+      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-6 py-3 rounded-lg text-lg font-medium flex items-center">
+        <svg class="mr-2 w-6 h-6 fill-current" viewBox="0 0 24 24">
           <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
         </svg>
         Về Trang Chủ
@@ -40,35 +32,72 @@
     </div>
   </header>
 
-  <!-- MAIN -->
-  <main class="max-w-6xl mx-auto px-4 sm:px-6 md:px-8 py-8 sm:py-12">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-amber-800 mb-6 sm:mb-8 text-center">Thông Tin Vận Chuyển</h2>
-    
-    <div class="bg-gradient-to-r from-amber-50 to-orange-50 rounded-2xl p-6 sm:p-8 mb-8">
-      <p class="text-lg sm:text-xl md:text-2xl text-gray-700 text-center leading-relaxed">
-        Chúng tôi cam kết giao hàng nhanh chóng, an toàn và tiện lợi đến tận tay khách hàng. 
-        Với mạng lưới vận chuyển rộng khắp cả nước, bạn sẽ nhận được cà phê tươi ngon trong thời gian sớm nhất.
+  <main class="max-w-6xl mx-auto px-4 py-12">
+    <!-- Tiêu đề -->
+    <div class="text-center mb-12">
+      <h2 class="text-6xl font-bold text-amber-800 mb-4">Liên Hệ Hỗ Trợ</h2>
+      <p class="text-2xl text-gray-600 max-w-3xl mx-auto">
+        Chúng tôi luôn sẵn sàng hỗ trợ bạn 24/7. Hãy liên hệ với chúng tôi qua các kênh dưới đây.
       </p>
     </div>
 
-    <!-- Quick Info Cards -->
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 mb-10 sm:mb-12">
-      <div class="shipping-item bg-white rounded-xl p-6 shadow-sm border border-gray-200 text-center">
-        <div class="w-14 h-14 sm:w-16 sm:h-16 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-3 sm:mb-4">
-          <svg class="w-6 h-6 sm:w-8 sm:h-8 text-green-600" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12.5,7V12.25L17,14.92L16.25,16.15L11,13V7H12.5Z"/>
-          </svg>
-        </div>
-        <h3 class="text-xl sm:text-2xl md:text-3xl font-bold text-amber-800 mb-2 sm:mb-3">1-3 Ngày</h3>
-        <p class="text-base sm:text-lg md:text-xl text-gray-700">Thời gian giao hàng toàn quốc</p>
+    <!-- Thẻ liên hệ -->
+    <div class="grid md:grid-cols-3 gap-8 mb-12">
+      <!-- Hotline -->
+      <div class="contact-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">Hotline 24/7</h3>
+        <p class="text-4xl font-bold text-green-600 mb-4">0988 007 527</p>
+        <a href="tel:0988007527" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-semibold inline-flex items-center">
+          Gọi Ngay
+        </a>
       </div>
-      <!-- Thêm 2 card nữa tương tự -->
+
+      <!-- Email -->
+      <div class="contact-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">Email Hỗ Trợ</h3>
+        <p class="text-lg font-semibold text-blue-600 mb-4 break-all">BABAIU23341@student.hcmiu.edu.vn</p>
+        <a href="mailto:BABAIU23341@student.hcmiu.edu.vn" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-semibold inline-flex items-center">
+          Gửi Email
+        </a>
+      </div>
+
+      <!-- Zalo -->
+      <div class="contact-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">Chat Zalo</h3>
+        <p class="text-xl font-semibold text-blue-500 mb-4">@caphesaigon</p>
+        <a href="https://zalo.me/caphesaigon" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold inline-flex items-center">
+          Nhắn Tin Ngay
+        </a>
+      </div>
     </div>
 
-    <!-- ... (giữ nguyên các section khác, chỉ thêm class responsive như trên) ... -->
+    <!-- Form -->
+    <div class="bg-white rounded-2xl shadow-lg p-8 mb-12">
+      <h3 class="text-4xl font-bold text-amber-800 mb-6 text-center">Gửi Tin Nhắn</h3>
+      <form class="max-w-2xl mx-auto" onsubmit="handleSubmit(event)">
+        <div class="grid md:grid-cols-2 gap-6 mb-6">
+          <input type="text" required placeholder="Họ và Tên" class="w-full px-4 py-3 border rounded-lg">
+          <input type="tel" required placeholder="Số Điện Thoại" class="w-full px-4 py-3 border rounded-lg">
+        </div>
+        <input type="email" placeholder="Email" class="w-full px-4 py-3 border rounded-lg mb-6">
+        <select class="w-full px-4 py-3 border rounded-lg mb-6">
+          <option>Tư vấn sản phẩm</option>
+          <option>Hỗ trợ kỹ thuật</option>
+          <option>Khiếu nại</option>
+          <option>Góp ý</option>
+          <option>Khác</option>
+        </select>
+        <textarea required rows="5" placeholder="Nội dung..." class="w-full px-4 py-3 border rounded-lg mb-6"></textarea>
+        <div class="text-center">
+          <button type="submit" class="bg-amber-600 hover:bg-amber-700 text-white px-8 py-4 rounded-xl font-semibold">
+            Gửi Tin Nhắn
+          </button>
+        </div>
+      </form>
+    </div>
 
-    <!-- Buttons dưới cùng -->
-    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 sm:gap-6 mt-10 sm:mt-12 mb-8">
+    <!-- Nút dưới cùng -->
+    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 sm:gap-6 mt-12 mb-8">
       <a href="index.html" class="w-full sm:w-auto text-center bg-gradient-to-r from-amber-600 to-amber-700 hover:from-amber-700 hover:to-amber-800 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-xl font-semibold text-lg sm:text-xl transition-all duration-200 transform hover:scale-105 shadow-lg flex items-center justify-center">
         <svg class="mr-2 sm:mr-3 w-6 h-6 sm:w-8 sm:h-8 fill-current" viewBox="0 0 24 24">
           <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
@@ -83,13 +112,18 @@
     </div>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="bg-gray-900 text-white py-6 text-center text-gray-400 text-xs sm:text-sm">
-    © 2024 Cà Phê Sài Gòn. Tất cả quyền được bảo lưu.
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-white py-8 mt-8 text-center">
+    <h3 class="text-lg font-semibold mb-4">Cà Phê Sài Gòn</h3>
+    <p class="text-gray-400 text-sm">© 2024 Cà Phê Sài Gòn. Tất cả quyền được bảo lưu.</p>
   </footer>
 
-  <!-- JS -->
   <script>
+    function handleSubmit(event) {
+      event.preventDefault();
+      alert("Tin nhắn đã được gửi thành công!");
+      event.target.reset();
+    }
     function scrollToTop() {
       window.scrollTo({
         top: 0,
