--- a/shipping.html
+++ b/shipping.html
@@ -3,79 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chính Sách Giao Hàng - Cà Phê Sài Gòn</title>
+  <title>Thông Tin Giao Hàng - Cà Phê Sài Gòn</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       box-sizing: border-box;
     }
+    .info-card {
+      transition: all 0.3s ease;
+    }
+    .info-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
-<body class="bg-gradient-to-br from-orange-50 to-amber-100 text-gray-800 min-h-screen">
-  <!-- Header -->
-  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-6 shadow-lg sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-3xl font-bold">Cà Phê Sài Gòn</h1>
-      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-6 py-3 rounded-lg text-lg font-medium flex items-center">
-        <svg class="mr-2 w-6 h-6 fill-current" viewBox="0 0 24 24">
-          <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
+<body class="bg-gradient-to-br from-amber-50 to-orange-100 text-gray-800 min-h-screen">
+
+  <!-- Header Responsive -->
+  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white shadow-lg sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 flex justify-between items-center py-4">
+      <!-- Logo -->
+      <h1 class="text-2xl sm:text-3xl font-bold">Cà Phê Sài Gòn</h1>
+
+      <!-- Nút menu mobile -->
+      <button class="md:hidden block focus:outline-none" onclick="toggleMenu()">
+        <svg class="w-8 h-8 fill-current" viewBox="0 0 24 24">
+          <path d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
-        Về Trang Chủ
-      </a>
+      </button>
+
+      <!-- Menu desktop -->
+      <nav class="hidden md:flex items-center space-x-6">
+        <a href="index.html" class="hover:text-amber-300">Trang Chủ</a>
+        <a href="shipping.html" class="hover:text-amber-300">Giao Hàng</a>
+        <a href="contact.html" class="hover:text-amber-300">Liên Hệ</a>
+        <a href="brewing.html" class="hover:text-amber-300">Pha Chế</a>
+      </nav>
+    </div>
+
+    <!-- Menu mobile dropdown -->
+    <div id="mobileMenu" class="hidden flex-col bg-amber-900 md:hidden">
+      <a href="index.html" class="px-4 py-3 border-t border-amber-700 hover:bg-amber-800">Trang Chủ</a>
+      <a href="shipping.html" class="px-4 py-3 border-t border-amber-700 hover:bg-amber-800">Giao Hàng</a>
+      <a href="contact.html" class="px-4 py-3 border-t border-amber-700 hover:bg-amber-800">Liên Hệ</a>
+      <a href="brewing.html" class="px-4 py-3 border-t border-amber-700 hover:bg-amber-800">Pha Chế</a>
     </div>
   </header>
 
-  <main class="max-w-5xl mx-auto px-4 py-12">
-    <!-- Tiêu đề -->
+  <!-- Nội dung chính -->
+  <main class="max-w-6xl mx-auto px-4 py-12">
     <div class="text-center mb-12">
-      <h2 class="text-5xl font-bold text-amber-800 mb-4">Chính Sách Giao Hàng</h2>
-      <p class="text-xl text-gray-600 max-w-3xl mx-auto">
-        Cà Phê Sài Gòn cam kết giao hàng nhanh chóng, an toàn và đúng hẹn để mang đến trải nghiệm tốt nhất cho khách hàng.
+      <h2 class="text-6xl font-bold text-amber-800 mb-4">Thông Tin Giao Hàng</h2>
+      <p class="text-2xl text-gray-600 max-w-3xl mx-auto">
+        Cà Phê Sài Gòn cam kết giao hàng nhanh chóng, an toàn và tiện lợi cho khách hàng trên toàn quốc.
       </p>
     </div>
 
-    <!-- Nội dung -->
-    <div class="bg-white rounded-2xl shadow-lg p-8 space-y-8">
-      <section>
-        <h3 class="text-2xl font-bold text-amber-700 mb-3">🚚 Phạm vi giao hàng</h3>
-        <p>Chúng tôi giao hàng trên toàn quốc thông qua các đơn vị vận chuyển uy tín. Riêng khu vực TP.HCM, chúng tôi có dịch vụ giao hàng nhanh trong ngày.</p>
-      </section>
+    <!-- Thông tin giao hàng -->
+    <div class="grid md:grid-cols-3 gap-8 mb-12">
+      <div class="info-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">🚚 Giao Nhanh Nội Thành</h3>
+        <p class="text-lg text-gray-600">Thời gian 1-2 ngày làm việc tại TP.HCM.</p>
+      </div>
+      <div class="info-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">📦 Toàn Quốc</h3>
+        <p class="text-lg text-gray-600">2-4 ngày làm việc cho các tỉnh thành khác.</p>
+      </div>
+      <div class="info-card bg-white rounded-2xl shadow-lg p-8 text-center">
+        <h3 class="text-2xl font-bold text-gray-800 mb-3">💳 Thanh Toán</h3>
+        <p class="text-lg text-gray-600">COD, chuyển khoản, ví điện tử, thẻ ngân hàng.</p>
+      </div>
+    </div>
 
-      <section>
-        <h3 class="text-2xl font-bold text-amber-700 mb-3">⏰ Thời gian giao hàng</h3>
-        <ul class="list-disc list-inside space-y-2 text-gray-700">
-          <li>TP.HCM: 1 - 2 ngày làm việc</li>
-          <li>Các tỉnh/thành khác: 2 - 5 ngày làm việc</li>
-          <li>Ngày lễ/Tết: Thời gian có thể chậm hơn 1 - 2 ngày</li>
-        </ul>
-      </section>
-
-      <section>
-        <h3 class="text-2xl font-bold text-amber-700 mb-3">💳 Phí vận chuyển</h3>
-        <p>Miễn phí giao hàng cho đơn hàng từ <span class="font-semibold">300,000đ</span>. Với đơn hàng nhỏ hơn, phí vận chuyển sẽ được tính theo biểu phí của đơn vị vận chuyển.</p>
-      </section>
-
-      <section>
-        <h3 class="text-2xl font-bold text-amber-700 mb-3">📦 Đóng gói</h3>
-        <p>Tất cả sản phẩm đều được đóng gói cẩn thận, có túi chống sốc và niêm phong kỹ trước khi giao để đảm bảo nguyên vẹn đến tay khách hàng.</p>
-      </section>
-
-      <section>
-        <h3 class="text-2xl font-bold text-amber-700 mb-3">🛑 Lưu ý</h3>
-        <p>Vui lòng kiểm tra sản phẩm ngay khi nhận hàng. Nếu có vấn đề, liên hệ ngay hotline <span class="font-semibold text-green-600">0988 007 527</span> để được hỗ trợ đổi trả.</p>
-      </section>
+    <!-- Chính sách -->
+    <div class="bg-white rounded-2xl shadow-lg p-8 mb-12">
+      <h3 class="text-4xl font-bold text-amber-800 mb-6 text-center">Chính Sách Vận Chuyển</h3>
+      <ul class="list-disc list-inside text-xl text-gray-700 space-y-3 max-w-3xl mx-auto">
+        <li>Miễn phí vận chuyển cho đơn hàng từ 500.000đ trở lên tại HCM.</li>
+        <li>Khách hàng ở tỉnh được hỗ trợ 50% phí ship cho đơn từ 700.000đ.</li>
+        <li>Đóng gói cẩn thận, đảm bảo chất lượng cà phê nguyên vẹn.</li>
+        <li>Cập nhật mã vận đơn ngay sau khi gửi hàng.</li>
+      </ul>
     </div>
 
     <!-- Nút dưới cùng -->
-    <div class="flex flex-col sm:flex-row justify-center items-center gap-4 sm:gap-6 mt-12 mb-8">
-      <a href="index.html" class="w-full sm:w-auto text-center bg-gradient-to-r from-amber-600 to-amber-700 hover:from-amber-700 hover:to-amber-800 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-xl font-semibold text-lg sm:text-xl transition-all duration-200 transform hover:scale-105 shadow-lg flex items-center justify-center">
-        <svg class="mr-2 sm:mr-3 w-6 h-6 sm:w-8 sm:h-8 fill-current" viewBox="0 0 24 24">
+    <div class="flex justify-center items-center gap-6 mt-12 mb-8">
+      <a href="index.html" class="bg-gradient-to-r from-amber-600 to-amber-700 hover:from-amber-700 hover:to-amber-800 text-white px-8 py-4 rounded-xl font-semibold text-xl transition-all duration-200 transform hover:scale-105 shadow-lg flex items-center">
+        <svg class="mr-3 w-8 h-8 fill-current" viewBox="0 0 24 24">
           <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
         </svg>
         Về Trang Chủ
       </a>
-      <button onclick="scrollToTop()" class="bg-gradient-to-r from-amber-600 to-orange-600 hover:from-amber-700 hover:to-orange-700 text-white w-12 h-12 sm:w-14 sm:h-14 rounded-full shadow-lg transition-all duration-200 transform hover:scale-110 flex items-center justify-center">
-        <svg class="w-6 h-6 sm:w-8 sm:h-8 fill-current" viewBox="0 0 24 24">
+      <button onclick="scrollToTop()" class="bg-gradient-to-r from-amber-600 to-orange-600 hover:from-amber-700 hover:to-orange-700 text-white w-14 h-14 rounded-full shadow-lg transition-all duration-200 transform hover:scale-110 flex items-center justify-center">
+        <svg class="w-8 h-8 fill-current" viewBox="0 0 24 24">
           <path d="M12 4l-8 8h6v8h4v-8h6l-8-8z"/>
         </svg>
       </button>
@@ -89,11 +110,12 @@
   </footer>
 
   <script>
+    function toggleMenu() {
+      const menu = document.getElementById("mobileMenu");
+      menu.classList.toggle("hidden");
+    }
     function scrollToTop() {
-      window.scrollTo({
-        top: 0,
-        behavior: 'smooth'
-      });
+      window.scrollTo({ top: 0, behavior: 'smooth' });
     }
   </script>
 </body>
